# WebSecurity-Academy-with-Python

./: README.md  results
API testing/: README.md
API testing/Exploiting a mass assignment vulnerability/: README.md  main.py
API testing/Exploiting an API endpoint using documentation/: README.md  main.py
API testing/Exploiting server-side parameter pollution in a REST URL/: README.md  main.py
API testing/Exploiting server-side parameter pollution in a query string/: main.py
API testing/Finding and exploiting an unused API endpoint/: README.md  main.py
Access control vulnerabilities/: README.md
Authentication/: README.md  passwords.txt
Business logic vulnerabilities/: README.md
Clickjacking/: README.md
Cross-origin resource sharing (CORS)/: README.md
Cross-site request forgery (CSRF)/: README.md
Cross-site scripting (XSS)/: README.md
DOM-based vulnerabilities/: README.md
File upload vulnerabilities/: README.md
GraphQL API vulnerabilities/: README.md
Information disclosure/: README.md
Insecure deserialization/: README.md
NoSQL injection/: README.md
OS command injection/: README.md
Path traversal/: README.md
SQL injection/: README.md
Server-side request forgery (SSRF)/: README.md
Server-side template injection (SSTI)/: README.md
Web cache poisoning/: README.md
Web cache poisoning/Web cache poisoning via an unkeyed query parameter/: Cargo.toml  README.md  main.py
Web cache poisoning/Web cache poisoning via an unkeyed query parameter/src/: main.rs
XML external entity (XXE) injection/: README.md
(+540 files in other folders)
